# Expected-Metrics-ML

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  evaluate.py  features.py  train.py
tests/: test_evaluate.py  test_features.py  test_train.py
