[project]
name = "expected-metrics-ml"
version = "1.0.0"
description = "Optuna + MLflow + XGBoost expected-metrics (xG) modeling system"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# matplotlib backend must be pinned before pyplot import
"src/train.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: long-running end-to-end tests"]
